# quick-flash

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.github/workflows/: checks.yml  release-plz.yml  release.yml
src/: config.rs  credentials.rs  credentials_manager.rs  lib.rs  main.rs  storage.rs  utils.rs
