[package]
name = "quick-flash"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/manakjiri/quick-flash"
description = "Flash centrally hosted firmware binaries with one command"
license = "MIT"

[lib]
name = "quick_flash"
path = "src/lib.rs"

[[bin]]
name = "quick-flash"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
etcetera = "0.10.0"
probe-rs = "0.29.1"
rust-s3 = {version = "0.37", default-features = false, features = ["sync", "sync-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.7"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.42"

[dev-dependencies]
tempfile = "3.23.0"


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.dependencies.apt]
libudev-dev = '*'
